--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,7 +13,7 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #f57b09;
-$secondary : #5a8f89;
+$secondary : #65778D;
 $accent    : #9C27B0;
 
 $dark      : #1D1D1D;
