--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,12 +13,12 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary   : #f57b09;
-$secondary : #65778D;
+$secondary : #6283AE;
 $accent    : #9C27B0;
 
 $dark      : #1D1D1D;
 
-$positive  : #21BA45;
+$positive  : #00CEFF;
 $negative  : #C10015;
-$info      : #31CCEC;
+$info      : #17D5A2;
 $warning   : #F2C037;
