Grafica por meses por tipos de documentos factura

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -18,7 +18,7 @@ $accent    : #9C27B0;
 
 $dark      : #1D1D1D;
 
-$positive  : #00CEFF;
+$positive  : #0999FF;
 $negative  : #C10015;
 $info      : #17D5A2;
 $warning   : #F2C037;
