Ajustar reporte de impuestos procesados y colocar imagen en card de tipos en dashboard

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -11,3 +11,12 @@
 .my-fondo {
   background: #fafbfc;
 }
+.filtros {
+  padding: 3px 7px;
+  background: #ECF6FF;
+  color: #65778D;
+  border: solid 1px #ECF6FF;
+  margin: 5px;
+  border-radius: 8px;
+  font-size: 13px;
+}
